--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: rgba(0, 0, 0, 0.8);
+            background-color: transparent;
             padding: 0.3em 0;
             flex-wrap: wrap;
         }
