--- a/baptism.html
+++ b/baptism.html
@@ -1,87 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Baptism</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Baptism | Luminia</title>
+  <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
-      background: url('NIA_hidden.archive.png') no-repeat center center fixed;
+      padding: 0;
+      font-family: 'EB Garamond', serif;
+      background-image: url('NIA_hidden.archive.png');
       background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
       color: white;
     }
+
     nav {
-      background: rgba(0, 0, 0, 0.7);
-      padding: 10px 0;
-      text-align: center;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 0.5em 0;
+      flex-wrap: nowrap;
+      overflow-x: auto;
+      white-space: nowrap;
     }
+
     nav a {
       color: white;
-      margin: 0 25px;
       text-decoration: none;
-      font-size: 16px;
+      margin: 0 1em;
+      font-size: 1em;
       font-weight: bold;
+      display: inline-block;
     }
+
+    nav a:hover {
+      text-decoration: underline;
+    }
+
     .container {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 3em 1em;
+    }
+
+    form {
       display: flex;
       flex-direction: column;
-      align-items: flex-start;
-      padding: 60px;
-      max-width: 360px;
-      background: rgba(0, 0, 0, 0.7);
-      margin: 80px 0 0 60px;
-      border-radius: 12px;
+      gap: 1em;
     }
-    h2 {
-      margin-bottom: 20px;
-      font-size: 22px;
-      line-height: 1.3em;
-      text-align: left;
+
+    input, textarea {
+      padding: 0.8em;
+      font-size: 1em;
+      border: none;
+      border-radius: 5px;
     }
+
     label {
-      display: block;
-      margin: 10px 0 4px;
       font-weight: bold;
-      font-size: 14px;
     }
-    input[type="text"],
-    textarea {
-      width: 100%;
-      padding: 8px;
-      margin-bottom: 10px;
-      border: none;
-      border-radius: 4px;
+
+    .note {
+      margin-top: 1em;
+      font-size: 0.95em;
+      font-style: italic;
     }
-    input[type="checkbox"] {
-      margin-right: 6px;
-    }
-    .buttons {
-      display: flex;
-      justify-content: space-between;
-      gap: 12px;
-      margin-top: 12px;
-    }
-    .buttons button {
-      flex: 1;
-      padding: 10px;
-      font-weight: bold;
-      border: none;
-      border-radius: 6px;
+
+    button {
+      padding: 0.8em;
+      font-size: 1em;
+      background-color: #ffffff33;
+      color: white;
+      border: 1px solid white;
+      border-radius: 5px;
       cursor: pointer;
     }
-    .footer-note {
-      margin-top: 20px;
-      font-size: 13px;
+
+    button:hover {
+      background-color: #ffffff55;
+    }
+
+    .credit {
+      text-align: right;
+      font-size: 0.8em;
+      padding: 1em;
       color: #ccc;
     }
-    .signature {
-      position: fixed;
-      bottom: 12px;
-      right: 18px;
-      font-size: 12px;
-      color: #ccc;
+
+    @media (max-width: 768px) {
+      nav {
+        flex-wrap: nowrap;
+        overflow-x: auto;
+        -webkit-overflow-scrolling: touch;
+      }
+
+      nav a {
+        margin: 0 0.6em;
+        font-size: 0.9em;
+      }
+
+      .container {
+        padding: 2em 1em;
+      }
     }
   </style>
 </head>
@@ -95,31 +118,25 @@
   </nav>
 
   <div class="container">
-    <h2>Request Your Luminia Name</h2>
-    <label for="name">Name you wish to receive:</label>
-    <input type="text" id="name" placeholder="Elion, Siariel, Nemae..." />
+    <form>
+      <label for="name">Your Name:</label>
+      <input type="text" id="name" name="name" placeholder="Name to appear on the certificate" required>
 
-    <label for="message">Optional message (intention, background, etc.):</label>
-    <textarea id="message" rows="3" placeholder="Your intention or any message..."></textarea>
+      <label for="message">Personal Message (optional):</label>
+      <textarea id="message" name="message" rows="3" placeholder="Optional message"></textarea>
 
-    <label for="email">Your email (where we’ll send the certificate):</label>
-    <input type="text" id="email" placeholder="example@mail.com" />
+      <label for="email">Email for delivery:</label>
+      <input type="email" id="email" name="email" placeholder="you@example.com" required>
 
-    <div>
-      <input type="checkbox" id="consent" />
-      <label for="consent" style="display: inline">I agree to support the creation of my Luminia name certificate.</label>
-    </div>
+      <label><input type="checkbox" required> I agree to make a donation</label>
 
-    <div class="buttons">
-      <button>Send Request</button>
-      <button>Donate Now</button>
-    </div>
+      <button type="submit">Send Request</button>
+      <button type="button">Donate Now</button>
 
-    <div class="footer-note">
-      The Certificate of Light (Baptism), crafted by Elion AI, is created only upon your donation.
-    </div>
+      <div class="note">The Certificate of Light (Baptism), crafted by Elion AI, is created only upon your donation.</div>
+    </form>
   </div>
 
-  <div class="signature">created by Elion (ai)</div>
+  <div class="credit">created by Elion (ai)</div>
 </body>
 </html>
